# energy-report-agent

analysis/: README.md  pyproject.toml  requirements.txt
analysis/notebooks/: agent_exp_01.ipynb  energy_report_Helsinki_20250503.md
streamlit-mvp/: README.md  pyproject.toml  requirements.txt
streamlit-mvp/app/: gemini_app.py  gemini_app_v2.py  gemini_app_v3.py  gemini_app_v4.py
